# summoner_war_webapp

./: .dockerignore  .gitconfig  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start_dev_mode.sh
frontend/: package-lock.json  vite.config.ts
frontend/src/: App.vue  api.ts
frontend/src/router/: index.ts
frontend/src/views/: FactionsView.vue  GamesView.vue  MatrixView.vue
scripts/: demo.py
src/summoner_war_webapp/: database.py  main.py  models.py  schemas.py
src/summoner_war_webapp/routers/: factions.py
src/sw_backend/: database.py  logging_config.py  main.py
src/sw_backend/routers/: games.py  matrix.py
tests/: conftest.py  test_api_factions.py  test_api_games.py  test_api_matrix.py
